adding translation for english version

--- a/index-en.html
+++ b/index-en.html
@@ -81,7 +81,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">OH, MA CHEVRE!</h1>
-              <p class="intro-text">“OPTIMIZAREA PARAMETRILOR REPRODUCTIVI, GENETICI ŞI DE SĂNĂTATE ÎN VEDEREA AMELIORĂRII PRODUCȚIEI EFECTIVELOR DE CAPRINE”</p>
+              <p class="intro-text">“OPTIMIZATION OF REPRODUCTIVE, GENETICS AND HEALTH PARAMETERS IN ORDER TO IMPROVE PRODUCTION IN GOAT HERDS" - "OH, MA CHEVRE!"”</p>
               <a href="#informatii" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
@@ -95,9 +95,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Informatii despre Proiect</h2>
-            <h5>PN III/P3/3.1//Modulul AUF-RO nr. 18-AUF/16.08.2016</h5>
-            <p>Proiectul „OPTIMIZAREA PARAMETRILOR REPRODUCTIVI, GENETICI ŞI DE SĂNĂTATE ÎN VEDEREA AMELIORĂRII PRODUCȚIEI EFECTIVELOR DE CAPRINE” – „OH, MA CHEVRE!” îşi propune crearea unei reţele de cadre ştiinţifice axate asupra diferitelor aspecte ale creşterii şi exploatării caprinelor (gestiunea reproducerii, desezonarea reproductivă şi a producţiei, gestionarea stării de sănătate, a geneticii caprinelor, a maladiilor infecţioase şi celor de la nivelul copitelor), ceea ce ar permite integrarea rezultatelor cercetărilor şi dezvoltarea soluţiilor pentru crescătorii de caprine în cadrul zonei ECO în conformitate cu provocările actuale.</p>
+            <h2>Project Information</h2>
+            <h5>PN III/P3/3.1//Module AUF-RO no. 18-AUF/16.08.2016</h5>
+            <p>The project "OPTIMIZATION OF REPRODUCTIVE, GENETICS AND HEALTH PARAMETERS IN ORDER TO IMPROVE PRODUCTION IN GOAT HERDS" - "OH, MA CHEVRE!", aims to create a network of scientific staff focused on different aspects of goats breeding and exploatation (reproductive management, out of seson breeding and production, health status management, goat genetics, infectious and hoof diseases), which would allow the integration of research results and the development of some new solutions for goat breeders within the ECO area in line with current challenges.</p>
           </div>
         </div>
       </div>
@@ -108,41 +108,41 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>OBIECTIVELE PROIECTULUI</h2>
+            <h2>PROJECT OBJECTIVES</h2>
 
                 <div class="accordion">
                   <div class="accordion-section">
-                    <a class="accordion-section-title" href="#accordion-1">OPTIMIZAREA GESTIONARII REPRODUCERII</a>
+                    <a class="accordion-section-title" href="#accordion-1">REPRODUCTIVE MANAGEMENT OPTIMIZATION</a>
                     <div id="accordion-1" class="accordion-section-content">
-                      <p>Scopul acestui prim obiectiv a fost de a demonstra avantajul protocolului modificat Ovsynch combinat cu inseminarea artificiala a caprelor la timp fixat, comparativ cu alte metode utilizate în controlul fertilităţii acestei specii.</p>
+                      <p>The aim of this first objective was to demonstrate the advantage of modified Ovsynch protocol, combined with artificial insemination of goats on fixed time, compared to other methods used to control fertility of this species.</p>
                     </div><!--end .accordion-section-content-->
                   </div><!--end .accordion-section-->
 
                   <div class="accordion-section">
-                    <a class="accordion-section-title" href="#accordion-2">Rolul antioxidanţilor asupra diferiţilor parametri reproductivi</a>
+                    <a class="accordion-section-title" href="#accordion-2">ANTIOXIDANTS ROLE ON DIFFERENT REPRODUCTIVE PARAMETERS</a>
                     <div id="accordion-2" class="accordion-section-content">
-                      <p>Al doilea obiectiv al proiectului a avut ca scop explicarea rolului antioxidanţilor (substanţe cu efect protectiv antioxidant) naturali (melatonină, vitamina A), adăugaţi în raţiile alimentare şi cuantificarea efectului acestora asupra diferiţilor parametri reproductivi. Scopul cercetării este de a studia efectul de adăugare al antioxidanţilor în timpul decongelării, care ar putea  ameliora „in vitro” fertilitatea spermei de ţap şi berbec şi în acelaşi timp, determinarea eventualelor diferenţe individuale existente între masculi.</p>
+                      <p>The second objective of the project was to explain the role of natural antioxidants (substances with antioxidant protective effect) (melatonin, vitamin A), added in feed rations and quantifying their effect on different reproductive parameters. The research purpose is to study the effect of adding antioxidants during defrosting, which could improve the "in vitro" fertility of goat, ram sperm and at the same time to determin the possible individual differences between males.</p>
                     </div><!--end .accordion-section-content-->
                   </div><!--end .accordion-section-->
 
                   <div class="accordion-section">
-                    <a class="accordion-section-title" href="#accordion-3">Impactul maladiilor infecţioase ale copitelor asupra reproducerii şi importanţa diagnosticului rapid şi tratamentului adecvat</a>
+                    <a class="accordion-section-title" href="#accordion-3">THE IMPACT OF INFECTIOUS HOOF DISEASES ON REPRODUCTION, AND THE IMPORTANCE OF RAPID DIAGNOSIS ALONG WITH APPOPRIATE TREATMENT</a>
                     <div id="accordion-3" class="accordion-section-content">
-                      <p>Acest obiectiv a vizat stabilirea unei corelaţii dintre mucegaiul copitei şi parametrii productivi şi reproductivi. Un alt scop a constat in determinarea parametrilor de reproducere (apariţia şi durata căldurilor, diagnosticul timpuriu al gestaţiei, prolificitatea) şi a producţiei de lapte la animalele bolnave şi cele fara probleme podale. Ultimul deziderat al acestui obiectiv a fost acela de a analiza efectul tratamentului local şi parenteral al mucegaiului copitei şi evaluarea eficacităţii protocoalelor terapeutice clasice şi galenice.</p>
+                      <p>This objective was to establish a correlation between hoof mold but also on productive and reproductive parameters. Another purpose was to determine reproduction parameters (appearance and lenght of heat, early pregnancy diagnosis, prolificity) and milk production in both sick animals and those without underlying problems. The last goal of this objective was to analyze the effect of local and parenteral treatment of hoof mold and to evaluate the effectiveness of classical and galenic therapeutic protocols.</p>
                     </div><!--end .accordion-section-content-->
                   </div><!--end .accordion-section-->
 
                   <div class="accordion-section">
-                    <a class="accordion-section-title" href="#accordion-4">Markerii genetici şi ameliorarea producţiei de lapte</a>
+                    <a class="accordion-section-title" href="#accordion-4">GENETIC MARKERS AND MILK PRODUCTION IMPROVEMENT</a>
                     <div id="accordion-4" class="accordion-section-content">
-                      <p>Al patrulea obiectiv al proiectului a vizat monitorizarea stării resurselor genetice ale populaţiilor locale de caprine în vederea îmbunătăţirii selecţiei; determinarea markerilor genetici de interes economic (αS1C; βCn; κCn; βLg) implicaţi în ameliorarea producţiei şi calităţii laptelui. Un obiectiv important a constat in asigurarea securităţii alimentare şi creşterea competitivităţii produselor lactate, precum si aducerea unei contributii in ceea ce priveste conservarea resurselor genetice locale.</p>
+                      <p>The fourth objective of the project was to monitor the status of genetic resources of local goat populations in order to improve selection;  genetic markers determining of economic interest (αS1C; βCn; κCn; βLg) involved in improving production and quality of milk. An important objective was to ensure food security and  competitiveness increase of dairy products, as well as to bring a contribution into conserving local genetic resources.</p>
                     </div><!--end .accordion-section-content-->
                   </div><!--end .accordion-section-->
 
                   <div class="accordion-section">
-                    <a class="accordion-section-title" href="#accordion-5">Evaluarea stării de sănătate în ceea ce priveşte bolile infecţioase a populaţiilor de caprine</a>
+                    <a class="accordion-section-title" href="#accordion-5">HEALTH STATUS ASSESSMENT REGARDING INFECTIOUS DISEASES IN GOAT POPULATIONS</a>
                     <div id="accordion-5" class="accordion-section-content">
-                      <p>Ultimul obiectiv a constat in evaluarea stării de sănătate a turmelor de caprine ce va permite pe viitor determinarea măsurilor de biosecuritate. Aceste masuri vor avea ca rezultat reducerea riscurilor de introducere şi propagarea maladiilor în cadrul turmei. Starea sănătăţii unei turme va fi evaluată în raport cu bolile infecţioase ale caprinelor: respiratorii (agalaxia infecţoasă), parazitare (helmintoze, coccidioze) şi reproductive (avorturi infecţioase).</p>
+                      <p>The last objective was to evaluate the health status in goat herds which will allow for the future determination of biosecurity measures. These measures will result in a risk reduction of introducing and spreading disease within the herd. A herd health status will be assessed in relation to goats infectious diseases: respiratory (contagious agalactia), parasitic (helminthiasis, coccidiosis) and reproductive (infectious abortions).</p>
                     </div><!--end .accordion-section-content-->
                   </div><!--end .accordion-section-->
                 </div><!--end .accordion-->
@@ -156,13 +156,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>ECHIPELE DE CERCETARE</h2>
+            <h2>RESEARCH TEAMS</h2>
 
                 <div class="accordion">
                   <div class="accordion-section">
-                    <a class="accordion-section-title" href="#accordion-6">CROAŢIA</a>
+                    <a class="accordion-section-title" href="#accordion-6">CROATIA</a>
                     <div id="accordion-6" class="accordion-section-content">
-                      <p style="text-align: center">Facultatea de Medicină Veterinară, Universitatea din Zagreb</p>
+                      <p style="text-align: center">Faculty of Veterinary Medicine, University of Zagreb</p>
                       <br>
                       <p style="text-align: center">Prof. Juraj Grizelj</p>
                       <p style="text-align: center">Prof. Silvijo Vince</p>
@@ -170,14 +170,15 @@
                       <p style="text-align: center">Prof. Danijel Špoljarić</p>
                       <p style="text-align: center">Prof. Renata Barić Rafaj</p>
                       <p style="text-align: center">Dr. Branimira Špoljarić</p>
-                      <p style="text-align: center">Ivan Butković (tînăr cercetător)</p>
+                      <p style="text-align: center">Ivan Butković (junior researcher)</p>
                     </div><!--end .accordion-section-content-->
                   </div><!--end .accordion-section-->
 
                   <div class="accordion-section">
-                    <a class="accordion-section-title" href="#accordion-7">GRECIA</a>
+                    <a class="accordion-section-title" href="#accordion-7">GREECE</a>
                     <div id="accordion-7" class="accordion-section-content">
-                      <p style="text-align: center">Facultatea de Medicină Veterinară, Universitatea din Tessalie</p>
+                      <p style="text-align: center">Faculty of Veterinary Science, University of Thessaly</p>
+                      <p style="text-align: center">Veterinary Research Institute, Hellenic Agricultural Organization, Thessaly</p>
                       <br>
                       <p style="text-align: center">Prof. Ekaterini Theodossiadou</p>
                       <p style="text-align: center">Prof. Irene Valasi</p>
@@ -187,35 +188,35 @@
                   <div class="accordion-section">
                     <a class="accordion-section-title" href="#accordion-8">MACEDONIA</a>
                     <div id="accordion-8" class="accordion-section-content">
-                      <p style="text-align: center">Facultatea de Medicină Veterinară şi Facultatea de Ştiinţe Agricole şi Alimentaţie, Universitatea Cyrille şi Methode, Skopje</p>
+                      <p style="text-align: center">Faculty of Veterinary Medicine, Ss. Cyril and Methodius University in Skopje</p>
                       <br>
                       <p style="text-align: center">Prof. Toni Dovenski</p>
                       <p style="text-align: center">Prof. Snježana Trojačanec</p>
-                      <p style="text-align: center">Ksenija Ilievska (tînăr cercetător)</p>
+                      <p style="text-align: center">Ksenija Ilievska (junior researcher)</p>
                     </div><!--end .accordion-section-content-->
                   </div><!--end .accordion-section-->
 
                   <div class="accordion-section">
-                    <a class="accordion-section-title" href="#accordion-9">REPUBLICA MOLDOVA</a>
+                    <a class="accordion-section-title" href="#accordion-9">REPUBLIC OF MOLDOVA</a>
                     <div id="accordion-9" class="accordion-section-content">
-                      <p style="text-align: center">Facultatea de Medicină Veterinară şi Ştiinţa Animalelor, Universitatea Agrară de Stat din Moldova</p>
+                      <p style="text-align: center">Animal Husbandry and Biotechnologies, The State Agrarian University of Moldova, Chisinau</p>
                       <br>
                       <p style="text-align: center">Prof. Valentina Petcu</p>
                       <p style="text-align: center">Prof. Elena Scripnic</p>
                       <p style="text-align: center">Prof. Ana Chiţanu</p>
-                      <p style="text-align: center">Irina Blîndu (tînăr cercetător)</p>
+                      <p style="text-align: center">Irina Blîndu (junior researcher)</p>
                     </div><!--end .accordion-section-content-->
                   </div><!--end .accordion-section-->
 
                   <div class="accordion-section">
-                    <a class="accordion-section-title" href="#accordion-10">ROMÂNIA</a>
+                    <a class="accordion-section-title" href="#accordion-10">ROMANIA</a>
                     <div id="accordion-10" class="accordion-section-content">
-                      <p style="text-align: center">Facultatea De Medicină Veterinară, Universitatea de Ştiinţe Agricole şi Medicină Veterinară “Ion Ionescu de la Brad”, Iaşi</p>
+                      <p style="text-align: center">Faculty of Veterinary Medicine, University of Applied Life Sciences, "Ion Ionescu de la Brad", Iasi</p>
                       <br>
                       <p style="text-align: center">Prof. Gheorghe Savuța</p>
-                      <p style="text-align: center">Sef Lucr. dr. Adriana Aniță</p>
-                      <p style="text-align: center">Iuliana Mihai (tînăr cercetător)</p>
-                      <p style="text-align: center">Ioana Cristina Crivei (tînăr cercetător)</p>
+                      <p style="text-align: center">Lecturer dr. Adriana Aniță</p>
+                      <p style="text-align: center">Iuliana Mihai (junior researcher)</p>
+                      <p style="text-align: center">Ioana Cristina Crivei (junior researcher)</p>
                     </div><!--end .accordion-section-content-->
                   </div><!--end .accordion-section-->
                 </div><!--end .accordion-->
@@ -228,7 +229,7 @@
     <section id="activitati" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-          <h2>Activitati</h2>
+          <h2>Activities</h2>
           <div>
                 <div class="flexslider" id="f1">
                   <ul class="slides">
@@ -573,7 +574,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>PARTENERI</h2>
+            <h2>PARTNERS</h2>
               <div class="responsive">
                 <div class="desc">Faculty of Veterinary Medicine, Iasi, Romania</div>
                 <div class="gallery">
