--- a/index.html
+++ b/index.html
@@ -234,189 +234,189 @@
                   <ul class="slides">
                     <li>
                       <img src="img/corsica/corsica-1.jpg" />
-                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-2.jpg" />
-                      <p class="flex-caption">Adventurer Lemon</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-4.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-5.jpg" />
-                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-6.jpg" />
-                      <p class="flex-caption">Adventurer Lemon</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-7.jpg" />
-                      <p class="flex-caption">Adventurer Donut</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-8.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-10.jpg" />
-                      <p class="flex-caption">Adventurer Lemon</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-11.jpg" />
-                      <p class="flex-caption">Adventurer Donut</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-12.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-13.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-15.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-16.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-18.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-19.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-20.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-21.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-22.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Corsica</p>
                     </li>
                     <!-- croatia -->
                     <li>
                       <img src="img/croatia/croatia-4.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-5.jpg" />
-                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-12.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-14.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-15.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-16.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-17.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-19.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-21.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-23.jpg" />
-                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-25.jpg" />
-                      <p class="flex-caption">Adventurer Donut</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-26.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-27.jpg" />
-                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-29.jpg" />
-                      <p class="flex-caption">Adventurer Donut</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-30.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
                       <img src="img/croatia/croatia-32.jpg" />
-                      <p class="flex-caption">Adventurer Lemon</p>
+                      <p class="flex-caption">Croatia</p>
                     </li>
                     <!-- republica moldova -->
                     <li>
                       <img src="img/moldova/moldova-1.jpg" />
-                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-2.jpg" />
-                      <p class="flex-caption">Adventurer Lemon</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-4.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-6.jpg" />
-                      <p class="flex-caption">Adventurer Lemon</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-7.jpg" />
-                      <p class="flex-caption">Adventurer Donut</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-8.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-9.jpg" />
-                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-10.jpg" />
-                      <p class="flex-caption">Adventurer Lemon</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-11.jpg" />
-                      <p class="flex-caption">Adventurer Donut</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-12.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-15.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-16.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                   </ul>
                 </div>
