renamed all the pictures extension

--- a/index-en.html
+++ b/index-en.html
@@ -234,189 +234,189 @@
                 <div class="flexslider" id="f1">
                   <ul class="slides">
                     <li>
-                      <img src="img/corsica/corsica-1.jpg" />
+                      <img src="img/corsica/corsica-1.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-2.jpg" />
+                      <img src="img/corsica/corsica-2.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-4.jpg" />
+                      <img src="img/corsica/corsica-4.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-5.jpg" />
+                      <img src="img/corsica/corsica-5.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-6.jpg" />
+                      <img src="img/corsica/corsica-6.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-7.jpg" />
+                      <img src="img/corsica/corsica-7.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-8.jpg" />
+                      <img src="img/corsica/corsica-8.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-10.jpg" />
+                      <img src="img/corsica/corsica-10.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-11.jpg" />
+                      <img src="img/corsica/corsica-11.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-12.jpg" />
+                      <img src="img/corsica/corsica-12.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-13.jpg" />
+                      <img src="img/corsica/corsica-13.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-15.jpg" />
+                      <img src="img/corsica/corsica-15.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-16.jpg" />
+                      <img src="img/corsica/corsica-16.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-18.jpg" />
+                      <img src="img/corsica/corsica-18.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-19.jpg" />
+                      <img src="img/corsica/corsica-19.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-20.jpg" />
+                      <img src="img/corsica/corsica-20.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-21.jpg" />
+                      <img src="img/corsica/corsica-21.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-22.jpg" />
+                      <img src="img/corsica/corsica-22.JPG" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <!-- croatia -->
                     <li>
-                      <img src="img/croatia/croatia-4.jpg" />
+                      <img src="img/croatia/croatia-4.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-5.jpg" />
+                      <img src="img/croatia/croatia-5.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-12.jpg" />
+                      <img src="img/croatia/croatia-12.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-14.jpg" />
+                      <img src="img/croatia/croatia-14.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-15.jpg" />
+                      <img src="img/croatia/croatia-15.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-16.jpg" />
+                      <img src="img/croatia/croatia-16.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-17.jpg" />
+                      <img src="img/croatia/croatia-17.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-19.jpg" />
+                      <img src="img/croatia/croatia-19.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-21.jpg" />
+                      <img src="img/croatia/croatia-21.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-23.jpg" />
+                      <img src="img/croatia/croatia-23.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-25.jpg" />
+                      <img src="img/croatia/croatia-25.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-26.jpg" />
+                      <img src="img/croatia/croatia-26.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-27.jpg" />
+                      <img src="img/croatia/croatia-27.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-29.jpg" />
+                      <img src="img/croatia/croatia-29.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-30.jpg" />
+                      <img src="img/croatia/croatia-30.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-32.jpg" />
+                      <img src="img/croatia/croatia-32.JPG" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <!-- republica moldova -->
                     <li>
-                      <img src="img/moldova/moldova-1.jpg" />
+                      <img src="img/moldova/moldova-1.JPG" />
                       <p class="flex-caption">Republic of Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-2.jpg" />
+                      <img src="img/moldova/moldova-2.JPG" />
                       <p class="flex-caption">Republic of Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-4.jpg" />
+                      <img src="img/moldova/moldova-4.JPG" />
                       <p class="flex-caption">Republic of Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-6.jpg" />
+                      <img src="img/moldova/moldova-6.JPG" />
                       <p class="flex-caption">Republic of Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-7.jpg" />
+                      <img src="img/moldova/moldova-7.JPG" />
                       <p class="flex-caption">Republic of Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-8.jpg" />
+                      <img src="img/moldova/moldova-8.JPG" />
                       <p class="flex-caption">Republic of Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-9.jpg" />
+                      <img src="img/moldova/moldova-9.JPG" />
                       <p class="flex-caption">Republic of Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-10.jpg" />
+                      <img src="img/moldova/moldova-10.JPG" />
                       <p class="flex-caption">Republic of Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-11.jpg" />
+                      <img src="img/moldova/moldova-11.JPG" />
                       <p class="flex-caption">Republic of Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-12.jpg" />
+                      <img src="img/moldova/moldova-12.JPG" />
                       <p class="flex-caption">Republic of Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-15.jpg" />
+                      <img src="img/moldova/moldova-15.JPG" />
                       <p class="flex-caption">Republic of Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-16.jpg" />
+                      <img src="img/moldova/moldova-16.JPG" />
                       <p class="flex-caption">Republic of Moldova</p>
                     </li>
                   </ul>
@@ -424,144 +424,144 @@
             <div class="flexslider carousel" id="f2">
                   <ul class="slides">
                     <li>
-                      <img src="img/corsica/corsica-1.jpg" />
+                      <img src="img/corsica/corsica-1.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-2.jpg" />
+                      <img src="img/corsica/corsica-2.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-4.jpg" />
+                      <img src="img/corsica/corsica-4.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-5.jpg" />
+                      <img src="img/corsica/corsica-5.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-6.jpg" />
+                      <img src="img/corsica/corsica-6.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-7.jpg" />
+                      <img src="img/corsica/corsica-7.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-8.jpg" />
+                      <img src="img/corsica/corsica-8.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-11.jpg" />
+                      <img src="img/corsica/corsica-11.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-12.jpg" />
+                      <img src="img/corsica/corsica-12.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-13.jpg" />
+                      <img src="img/corsica/corsica-13.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-15.jpg" />
+                      <img src="img/corsica/corsica-15.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-16.jpg" />
+                      <img src="img/corsica/corsica-16.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-18.jpg" />
+                      <img src="img/corsica/corsica-18.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-19.jpg" />
+                      <img src="img/corsica/corsica-19.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-20.jpg" />
+                      <img src="img/corsica/corsica-20.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-21.jpg" />
+                      <img src="img/corsica/corsica-21.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-22.jpg" />
+                      <img src="img/corsica/corsica-22.JPG" />
                     </li>
                     <!-- croatia -->
                     <li>
-                      <img src="img/croatia/croatia-4.jpg" />
+                      <img src="img/croatia/croatia-4.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-5.jpg" />
+                      <img src="img/croatia/croatia-5.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-9.jpg" />
+                      <img src="img/croatia/croatia-9.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-12.jpg" />
+                      <img src="img/croatia/croatia-12.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-14.jpg" />
+                      <img src="img/croatia/croatia-14.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-15.jpg" />
+                      <img src="img/croatia/croatia-15.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-16.jpg" />
+                      <img src="img/croatia/croatia-16.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-17.jpg" />
+                      <img src="img/croatia/croatia-17.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-19.jpg" />
+                      <img src="img/croatia/croatia-19.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-21.jpg" />
+                      <img src="img/croatia/croatia-21.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-23.jpg" />
+                      <img src="img/croatia/croatia-23.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-25.jpg" />
+                      <img src="img/croatia/croatia-25.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-26.jpg" />
+                      <img src="img/croatia/croatia-26.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-27.jpg" />
+                      <img src="img/croatia/croatia-27.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-29.jpg" />
+                      <img src="img/croatia/croatia-29.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-30.jpg" />
+                      <img src="img/croatia/croatia-30.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-32.jpg" />
+                      <img src="img/croatia/croatia-32.JPG" />
                     </li>
                     <!-- republica moldova -->
                     <li>
-                      <img src="img/moldova/moldova-1.jpg" />
+                      <img src="img/moldova/moldova-1.JPG" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-2.jpg" />
+                      <img src="img/moldova/moldova-2.JPG" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-4.jpg" />
+                      <img src="img/moldova/moldova-4.JPG" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-6.jpg" />
+                      <img src="img/moldova/moldova-6.JPG" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-7.jpg" />
+                      <img src="img/moldova/moldova-7.JPG" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-8.jpg" />
+                      <img src="img/moldova/moldova-8.JPG" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-9.jpg" />
+                      <img src="img/moldova/moldova-9.JPG" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-10.jpg" />
+                      <img src="img/moldova/moldova-10.JPG" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-11.jpg" />
+                      <img src="img/moldova/moldova-11.JPG" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-12.jpg" />
+                      <img src="img/moldova/moldova-12.JPG" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-15.jpg" />
+                      <img src="img/moldova/moldova-15.JPG" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-16.jpg" />
+                      <img src="img/moldova/moldova-16.JPG" />
                     </li>
                   </ul>
                 </div>
